--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                 </a>
                 <a href="/reservations">
                     <button type="button" class="btn btn-danger btn-lg">
-                        <span class="glyphicon glyphicon-calendar"></span> View Reservations</button>
+                        <span class="glyphicon glyphicon-calendar"></span> Make Reservations</button>
                 </a>
             </div>
 
@@ -45,6 +45,9 @@
             </div>
         </footer>
     </div>
+    <script>
+
+    </script>
 </body>
 
 </html>
