--- a/tables.html
+++ b/tables.html
@@ -26,7 +26,7 @@
             <div class="text-center">
                 <a href="/reservation">
                     <button type="button" class="btn btn-danger btn-lg">
-                        <span class="glyphicon glyphicon-calendar"></span> View Reservations</button>
+                        <span class="glyphicon glyphicon-calendar"></span> Make Reservations</button>
                 </a>
                 <a href="/">
                     <button type="button" class="btn btn-default btn-lg">
@@ -96,6 +96,10 @@
                         </p>
                     </div>
                 </footer>
+            </div>
+        </div>
+    </div>
+    
 
 </body>
 
