--- a/reservations.html
+++ b/reservations.html
@@ -85,6 +85,25 @@
             </footer>
         </div>
     </div>
+    <script type="text/javascript">
+        // Question: What does this code do?
+        $("#add-btn").on("click", function (event) {
+            event.preventDefault();
+            var newCustomer = {
+                name: $("#name").val().trim(),
+                phoneNumber: $("#phone_number").val().trim(),
+                email: $("#email").val().trim(),
+                uniqueID: $("#unique_id").val().trim()
+            };
+
+            // Question: What does this code do??
+            $.post("/api/new", newCustomer)
+                .done(function (data) {
+                    console.log(data);
+                    alert("You're reservation was successfully added. Thank you!");
+                });
+        });
+    </script>
 
 
 </body>
