--- a/app/public/reservations.html
+++ b/app/public/reservations.html
@@ -47,28 +47,28 @@
                         </h3>
                     </div>
                     <div class="panel-body">
-                        <form method="POST" role="form">
+                        <form role="form">
 
                             <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" id="name">
+                                <label for="">Name</label>
+                                <input type="text" class="form-control" id="reserve_name">
                             </div>
 
                             <div class="form-group">
-                                <label for="phone_number">Phone Number</label>
-                                <input type="text" class="form-control" id="phone_number">
+                                <label for="">Phone Number</label>
+                                <input type="text" class="form-control" id="reserve_phone">
                             </div>
 
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email">
+                                <label for="">Email</label>
+                                <input type="text" class="form-control" id="reserve_email">
                             </div>
 
                             <div class="form-group">
-                                <label for="unique_id">Unique ID</label>
-                                <input type="text" class="form-control" id="unique_id">
+                                <label for="">Unique ID</label>
+                                <input type="text" class="form-control" id="reserve_uniqueID">
                             </div>
-                            <button type="submit" class="btn btn-primary submit" id="add-btn">
+                            <button type="submit" class="btn btn-primary submit">
                                 <span class="glyphicon glyphicon-fire"></span>Submit</button>
                         </form>
                     </div>
@@ -77,9 +77,13 @@
             <footer class="footer">
                 <div class="container">
                     <p>
-                        <a href="/api/tables">API Table Link</a>
+                        <a href="#" id="clear">Clear Table</a>
+                        |
+                        <a href="/api/tables">API Table List</a>
                         |
                         <a href="/api/waitlist">API Wait List</a>
+                        |
+                        <a href="https://github.com/brendan-kellams/Hot-Restaurant">GitHub Repo</a>
                     </p>
                 </div>
             </footer>
@@ -87,21 +91,42 @@
     </div>
     <script type="text/javascript">
         // Question: What does this code do?
-        $("#add-btn").on("click", function (event) {
-            event.preventDefault();
-            var newCustomer = {
-                name: $("#name").val().trim(),
-                phoneNumber: $("#phone_number").val().trim(),
-                email: $("#email").val().trim(),
-                uniqueID: $("#unique_id").val().trim()
+        $(".submit").on("click", function () {
+            var newReservation = {
+                customerName: $("#reserve_name").val().trim(),
+                phoneNumber: $("#reserve_phone").val().trim(),
+                customerEmail: $("#reserve_email").val().trim(),
+                customerID: $("#reserve_uniqueID").val().trim()
             };
+            console.log(newReservation);
 
-            // Question: What does this code do??
-            $.post("/api/new", newCustomer)
-                .done(function (data) {
-                    console.log(data);
-                    alert("You're reservation was successfully added. Thank you!");
-                });
+            var currentURL = window.location.origin;
+
+            $.post(currentURL + "/api/tables", newReservation, function (data) {
+                if (data == true) {
+                    alert("Yay! You are officially booked!");
+                }
+                if (data == false) {
+                    alert("Sorry you are on the waiting list.")
+                }
+
+                $("#reserve_name").val("");
+                $("#reserve_phone").val("");
+                $("#reserve_email").val("");
+                $("#reserve_uniqueID").val("");
+            });
+            return false;
+        });
+
+        function clearTable() {
+            var currentURL = window.location.origin;
+            $.ajax({ url: currentURL + "/api/clear", method: "POST" })
+        }
+
+        $("#clear").on('click', function () {
+            alert("Clearing...");
+            clearTable();
+            location.reload();
         });
     </script>
 
